[gd_scene load_steps=8 format=2]

[ext_resource path="res://Robot/Machine Gun/machine.dae" type="PackedScene" id=1]
[ext_resource path="res://Robot/Machine Gun/machineGun.gd" type="Script" id=2]
[ext_resource path="res://Textures/pngwing.com.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_use_shadow_to_opacity = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]

[sub_resource type="QuadMesh" id=3]

[sub_resource type="Animation" id=4]
resource_name = "fire"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Cube/Circle002:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -90 ), Vector3( 360, 0, -90 ) ]
}

[node name="machine" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Circle002" parent="Cube" index="0"]
transform = Transform( 6.96737e-08, 1.30877, 0, -0.922856, 9.88093e-08, 0, 0, 0, 0.922856, 1.43909, 0.308005, 0.0304787 )

[node name="Aimpoints" type="Spatial" parent="Cube" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.31166, 0 )

[node name="Aimpoint1" type="Spatial" parent="Cube/Aimpoints" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 3.35082, 0 )

[node name="Aimpoint2" type="Spatial" parent="Cube/Aimpoints" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 3.13453, -0.499053 )

[node name="Aimpoint3" type="Spatial" parent="Cube/Aimpoints" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 2.60437, -0.692857 )

[node name="Aimpoint4" type="Spatial" parent="Cube/Aimpoints" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 2.19748, -0.48881 )

[node name="Aimpoint5" type="Spatial" parent="Cube/Aimpoints" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 1.93476, 0.0688401 )

[node name="Aimpoint6" type="Spatial" parent="Cube/Aimpoints" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 2.21709, 0.523324 )

[node name="Aimpoint7" type="Spatial" parent="Cube/Aimpoints" index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 2.64248, 0.690032 )

[node name="Aimpoint8" type="Spatial" parent="Cube/Aimpoints" index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6273, 3.07989, 0.519086 )

[node name="Particles" type="Spatial" parent="Cube" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.360137, -2.31166, 0 )

[node name="Particles1" type="Particles" parent="Cube/Particles" index="0"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 1.95816, -0.0312539 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles2" type="Particles" parent="Cube/Particles" index="1"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 2.18356, -0.537004 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles3" type="Particles" parent="Cube/Particles" index="2"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 2.64795, -0.69616 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles4" type="Particles" parent="Cube/Particles" index="3"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 2.14053, 0.535618 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles5" type="Particles" parent="Cube/Particles" index="4"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 2.59984, 0.746785 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles6" type="Particles" parent="Cube/Particles" index="5"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 3.04963, 0.544007 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles7" type="Particles" parent="Cube/Particles" index="6"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 3.31313, 0.0165929 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles8" type="Particles" parent="Cube/Particles" index="7"]
transform = Transform( -3.0598e-08, -1.51, 0, 0.7, -6.60042e-08, 0, 0, 0, 0.7, 7.58322, 3.08359, -0.480248 )
layers = 2
material_override = SubResource( 1 )
emitting = false
lifetime = 0.5
speed_scale = 3.78
explosiveness = 1.0
randomness = 0.62
fract_delta = false
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="RobotView" type="Camera" parent="Cube" index="3"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.49691, 0.345595, 0.0294452 )
fov = 30.0

[node name="AnimationPlayer" parent="." index="5"]
anims/fire = SubResource( 4 )

[node name="Reload Timer" type="Timer" parent="." index="6"]
wait_time = 0.001
one_shot = true
